# shapones

./: .clang-format  .gitignore  README.md
core/bmp/: font12x24.py  font8x16.py
core/include/shapones/: apu.hpp  common.hpp  cpu.hpp  dma.hpp  fifo.hpp  font12x24.hpp  font8x16.hpp  fs.hpp  host_intf.hpp  input.hpp  interrupt.hpp  lock.hpp  mapper.hpp  memory.hpp  menu.hpp  ppu.hpp  shapones.hpp  state.hpp  utils_std.hpp
core/include/shapones/mappers/: map000.hpp  map001.hpp  map002.hpp  map003.hpp  map004.hpp
core/src/: apu.cpp  common.cpp  cpu.cpp  dma.cpp  fs.cpp  input.cpp  interrupt.cpp  mapper.cpp  memory.cpp  menu.cpp  ppu.cpp  shapones.cpp  state.cpp  utils_std.cpp
roms/: BomberManII.spn  README.md  memo.txt  nes2cpp.py  super_mario_bros_3.spn
samples/fatfs/source/: ff.c  ffconf.h  mmc_pico_spi.c
samples/font/mono8x16/: font2cpp.py  font2cpp.sh  mono8x16.cpp  mono8x16.hpp  mono8x16_bmp.cpp
samples/m5/: flatten_headers.py
samples/m5/ShapoNES/: AdcButton.hpp  ShapoNES.ino  shapones_core.cpp  shapones_core.h
samples/m5/kicad/: shapones_atoms3.kicad_prl  shapones_atoms3.kicad_pro  shapones_atoms3.kicad_sch
samples/pico_ws19579/: CMakeLists.txt  Makefile.sample.mk  nes_rom.hpp  pico_nes_ws19579.cpp  ws19579.hpp
samples/pico_ws19804/: CMakeLists.txt  Makefile  Makefile.sample.mk  boot_menu.cpp  boot_menu.hpp  common.cpp  common.hpp  nes_rom.hpp  pico_nes_ws19804.cpp  pwm_audio.hpp  ws19804.cpp  ws19804.hpp  ws19804.pio  ws19804_c.h
samples/picopad/: Makefile  build.sh
samples/picopad/EMU/SHAPONES/: Makefile  c.sh  config.h  d.sh  e.sh
samples/picopad/EMU/SHAPONES/src/: main.cpp
samples/wxapp/: Makefile  Makefile.sample.mk  nes_app.cpp  nes_audio.cpp  nes_audio.hpp  nes_load.cpp  nes_load.hpp  nes_screen.cpp  nes_screen.hpp
